tests/baselines/reference/extendsClauseAlreadySeen.errors.txt
==== tests/cases/compiler/extendsClauseAlreadySeen.ts (1 errors) ====
    class C {
    
    }
    class D extends C extends C {
                      ~~~~~~~~~
!!! error TS1024: 'extends' clause already seen.
        baz() { }
    }